--- a/package.json
+++ b/package.json
@@ -16,21 +16,34 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@mdx-js/loader": "^1.5.0",
+    "@storybook/addon-a11y": "^5.2.1",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-backgrounds": "^5.2.1",
+    "@storybook/addon-console": "^1.2.1",
+    "@storybook/addon-docs": "^5.3.0-alpha.9",
+    "@storybook/addon-knobs": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-storysource": "^5.2.1",
+    "@storybook/addon-viewport": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/preset-typescript": "^1.1.0",
+    "@storybook/react": "^5.3.0-alpha.10",
+    "@thoughtbot/eslint-config": "^0.1.0",
+    "@thoughtbot/stylelint-config": "^1.1.0",
+    "@types/storybook__react": "^4.0.2",
+    "babel-loader": "^8.0.6",
+    "prettier": "^1.18.2",
+    "react-docgen-typescript-loader": "^3.3.0",
+    "storybook-addon-react-docgen": "^1.2.28",
+    "storybook-dark-mode": "^0.1.7",
+    "storybook-host": "^5.1.0",
+    "stylelint": "^11.0.0",
+    "ts-loader": "^6.2.0"
   }
 }
